ESG-111/Topic 5/CLC/error.txt
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino: In function 'void RFID_WRITE()':
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:142:34: error: 'PICC_TYPE_MIFARE_MINI' is not a member of 'MFRC522'
     if (    piccType != MFRC522::PICC_TYPE_MIFARE_MINI
                                  ^~~~~~~~~~~~~~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:143:34: error: 'PICC_TYPE_MIFARE_1K' is not a member of 'MFRC522'
         &&  piccType != MFRC522::PICC_TYPE_MIFARE_1K
                                  ^~~~~~~~~~~~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:144:34: error: 'PICC_TYPE_MIFARE_4K' is not a member of 'MFRC522'
         &&  piccType != MFRC522::PICC_TYPE_MIFARE_4K) {
                                  ^~~~~~~~~~~~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:177:70: error: 'PICC_CMD_MF_AUTH_KEY_A' is not a member of 'MFRC522'
     status = (MFRC522::StatusCode) mfrc522.PCD_Authenticate(MFRC522::PICC_CMD_MF_AUTH_KEY_A, trailerBlock, &key, &(mfrc522.uid));
                                                                      ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:178:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:186:85: error: no matching function for call to 'MFRC522Debug::PICC_DumpMifareClassicSectorToSerial(MFRC522&, MFRC522::MIFARE_Key*, byte&, Serial_&)'
     MFRC522Debug::PICC_DumpMifareClassicSectorToSerial(mfrc522, &key, sector, Serial);
                                                                                     ^
In file included from C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:15:0:
c:\Users\schlo\OneDrive\Documents\Arduino\libraries\RFID_MFRC522v2\src/MFRC522Debug.h:31:15: note: candidate: static void MFRC522Debug::PICC_DumpMifareClassicSectorToSerial(MFRC522&, arduino::Print&, MFRC522Debug::Uid*, MFRC522Debug::MIFARE_Key*, byte)
   static void PICC_DumpMifareClassicSectorToSerial(MFRC522 &device, Print &logPrint, Uid *uid, MIFARE_Key *key, byte sector);
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
c:\Users\schlo\OneDrive\Documents\Arduino\libraries\RFID_MFRC522v2\src/MFRC522Debug.h:31:15: note:   candidate expects 5 arguments, 4 provided
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:193:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:203:70: error: 'PICC_CMD_MF_AUTH_KEY_B' is not a member of 'MFRC522'
     status = (MFRC522::StatusCode) mfrc522.PCD_Authenticate(MFRC522::PICC_CMD_MF_AUTH_KEY_B, trailerBlock, &key, &(mfrc522.uid));
                                                                      ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:204:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:215:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:225:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:251:85: error: no matching function for call to 'MFRC522Debug::PICC_DumpMifareClassicSectorToSerial(MFRC522&, MFRC522::MIFARE_Key*, byte&, Serial_&)'
     MFRC522Debug::PICC_DumpMifareClassicSectorToSerial(mfrc522, &key, sector, Serial);
                                                                                     ^
In file included from C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:15:0:
c:\Users\schlo\OneDrive\Documents\Arduino\libraries\RFID_MFRC522v2\src/MFRC522Debug.h:31:15: note: candidate: static void MFRC522Debug::PICC_DumpMifareClassicSectorToSerial(MFRC522&, arduino::Print&, MFRC522Debug::Uid*, MFRC522Debug::MIFARE_Key*, byte)
   static void PICC_DumpMifareClassicSectorToSerial(MFRC522 &device, Print &logPrint, Uid *uid, MIFARE_Key *key, byte sector);
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
c:\Users\schlo\OneDrive\Documents\Arduino\libraries\RFID_MFRC522v2\src/MFRC522Debug.h:31:15: note:   candidate expects 5 arguments, 4 provided
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino: In function 'void CHECK_CARD_HOLD()':
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:316:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (result == MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino: In function 'void RFID_READ()':
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:436:70: error: 'PICC_CMD_MF_AUTH_KEY_A' is not a member of 'MFRC522'
     status = (MFRC522::StatusCode) mfrc522.PCD_Authenticate(MFRC522::PICC_CMD_MF_AUTH_KEY_A, trailerBlock, &key, &(mfrc522.uid));
                                                                      ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:437:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:446:28: error: 'STATUS_OK' is not a member of 'MFRC522'
     if (status != MFRC522::STATUS_OK) {
                            ^~~~~~~~~
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino: In function 'void RFID_PREP()':
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:484:43: error: 'MF_KEY_SIZE' is not a member of 'MFRC522'
     dump_byte_array(key.keyByte, MFRC522::MF_KEY_SIZE);
                                           ^~~~~~~~~~~
exit status 1

Compilation error: 'PICC_TYPE_MIFARE_MINI' is not a member of 'MFRC522'